@@ -1,11 +1,11 @@
-package yakxin.columbina;
+package yakxin.columbina.fillet;
 
 import org.openstreetmap.josm.data.coor.EastNorth;
-import org.openstreetmap.josm.data.coor.LatLon;
 import org.openstreetmap.josm.data.osm.Node;
 import org.openstreetmap.josm.data.osm.Way;
-import org.openstreetmap.josm.data.projection.ProjectionRegistry;
-import yakxin.columbina.data.FilletResult;
+import yakxin.columbina.data.ColumbinaException;
+import yakxin.columbina.data.dto.DrawingNewNodeResult;
+import yakxin.columbina.utils.UtilsMath;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -13,26 +13,12 @@ import java.util.List;
 
 // 圆角计算器
 public class FilletGenerator {
-    /// 坐标转换
-    private static EastNorth toEastNorth(LatLon ll) {  // 经纬度转距离坐标
-        return ProjectionRegistry.getProjection().latlon2eastNorth(ll);
-    }
-    private static LatLon toLatLon(EastNorth en) {  // 距离坐标转经纬度
-        return ProjectionRegistry.getProjection().eastNorth2latlon(en);
-    }
-
-    /// 向量数学
-    private static double norm(double[] v) { return Math.hypot(v[0], v[1]); }  // 模长
-    private static double dot(double[] a, double[] b) { return a[0]*b[0] + a[1]*b[1]; }  // 点积
-    private static double[] sub(double[] a, double[] b) { return new double[]{a[0]-b[0], a[1]-b[1]}; }  // 减法
-    private static double[] add(double[] a, double[] b) { return new double[]{a[0]+b[0], a[1]+b[1]}; }  // 加法
-    private static double[] mul(double[] a, double s) { return new double[]{a[0]*s, a[1]*s}; }  // 缩放
 
     /// 圆角算法
-    // 绘制一个圆角（需要输入重算距离而不是直接的NE坐标距离）
-    public static List<EastNorth> filletArcEN(
+    // 绘制一个圆角（需要输入重算距离而不是直接的地表距离）
+    public static List<EastNorth> getFilletArc(
             EastNorth A, EastNorth B, EastNorth C,
-            double R, double angleStep, int maxNumPoints,
+            double enRadius, double angleStep, int maxNumPoints,
             double minAngleDeg, double maxAngleDeg
     ) {
         // 获取node坐标
@@ -41,17 +27,17 @@ public class FilletGenerator {
         double[] c = new double[]{C.getX(), C.getY()};  // C终点     A
 
         // 方向向量
-        double[] v1 = sub(a, b);  // BA向量
-        double[] v2 = sub(c, b);  // BC向量
-        double n1 = norm(v1);     // BA长度
-        double n2 = norm(v2);     // BC长度
+        double[] v1 = UtilsMath.sub(a, b);  // BA向量
+        double[] v2 = UtilsMath.sub(c, b);  // BC向量
+        double n1 = UtilsMath.norm(v1);     // BA长度
+        double n2 = UtilsMath.norm(v2);     // BC长度
         if (n1 < 1e-9 || n2 < 1e-9) return null;  // 检查向量有效性（不能太短近乎于点挤在一起）
 
-        double[] u1 = mul(v1, 1.0 / n1);  // BA单位向量
-        double[] u2 = mul(v2, 1.0 / n2);  // BC单位向量
+        double[] u1 = UtilsMath.mul(v1, 1.0 / n1);  // BA单位向量
+        double[] u2 = UtilsMath.mul(v2, 1.0 / n2);  // BC单位向量
 
         // 拐点夹角（方向向量点积取acos）
-        double dp = Math.max(-1.0, Math.min(1.0, dot(u1, u2)));  // 点积（限制在[-1,1]范围内）
+        double dp = Math.max(-1.0, Math.min(1.0, UtilsMath.dot(u1, u2)));  // 点积（限制在[-1,1]范围内）
         double theta = Math.acos(dp);  // 夹角（弧度[0,π]）
         // 检查张角有效性
         double minAngleRad = Math.toRadians(minAngleDeg);
@@ -60,16 +46,16 @@ public class FilletGenerator {
         if (theta < 1e-9 || theta > Math.PI - 1e-9) return null;  // θ为0说明成了发卡角，θ为π说明张角基本是直线
 
         // 圆弧的起点和终点（切点）
-        double t = R / Math.tan(theta / 2.0);  // 从B到两侧切点的距离
+        double t = enRadius / Math.tan(theta / 2.0);  // 从B到两侧切点的距离
         if (t > n1 - 1e-9 || t > n2 - 1e-9) return null;  // 检查半径是否过大
-        double[] T1 = add(b, mul(u1, t));  // BA上的切点坐标T1
-        double[] T2 = add(b, mul(u2, t));  // BC上的切点坐标T2
+        double[] T1 = UtilsMath.add(b, UtilsMath.mul(u1, t));  // BA上的切点坐标T1
+        double[] T2 = UtilsMath.add(b, UtilsMath.mul(u2, t));  // BC上的切点坐标T2
 
         // 圆弧圆心坐标
-        double d = R / Math.sin(theta / 2.0);  // B到圆心的距离
-        double[] bis = add(u1, u2);  // 角平分线方向
-        if (norm(bis) < 1e-12) return null;  // 角平分线是否有效
-        double[] center = add(b, mul(bis, d / norm(bis))); // 圆心坐标
+        double d = enRadius / Math.sin(theta / 2.0);  // B到圆心的距离
+        double[] bis = UtilsMath.add(u1, u2);  // 角平分线方向
+        if (UtilsMath.norm(bis) < 1e-12) return null;  // 角平分线是否有效
+        double[] center = UtilsMath.add(b, UtilsMath.mul(bis, d / UtilsMath.norm(bis))); // 圆心坐标
 
         // 圆弧起始和结束角度
         double ang1 = Math.atan2(T1[1] - center[1], T1[0] - center[0]);  // 圆心到T1的角度
@@ -95,23 +81,23 @@ public class FilletGenerator {
         for (int i = 0; i <= numAngleSteps; i ++){
             double tt = (double) i / numAngleSteps;    // 插值参数 [0,1]
             double ang = ang1 + (ang2 - ang1) * tt;    // 当前角度
-            double x = center[0] + R * Math.cos(ang);  // 圆弧点X坐标
-            double y = center[1] + R * Math.sin(ang);  // 圆弧点Y坐标
+            double x = center[0] + enRadius * Math.cos(ang);  // 圆弧点X坐标
+            double y = center[1] + enRadius * Math.sin(ang);  // 圆弧点Y坐标
             arc.add(new EastNorth(x, y));
         }
         return arc;
     }
 
-    public static FilletResult buildSmoothPolyline(Way way, double radiusMeters) {
-        return buildSmoothPolyline(way, radiusMeters, 20);
+    public static DrawingNewNodeResult buildSmoothPolyline(Way way, double surfaceRadius) {
+        return buildSmoothPolyline(way, surfaceRadius, 20);
     }
-    public static FilletResult buildSmoothPolyline(Way way, double radiusMeters, int maxPointNum) {
-        return buildSmoothPolyline(way, radiusMeters, 1.0, maxPointNum, 1e-9, 180 - 1e-9);
+    public static DrawingNewNodeResult buildSmoothPolyline(Way way, double surfaceRadius, int maxPointNum) {
+        return buildSmoothPolyline(way, surfaceRadius, 1.0, maxPointNum, 1e-9, 180 - 1e-9);
     }
     // 汇总所有的圆角
-    public static FilletResult buildSmoothPolyline(
+    public static DrawingNewNodeResult buildSmoothPolyline(
             Way way,
-            double radiusMeters, double angleStep, int maxPointNum,
+            double surfaceRadius, double angleStep, int maxPointNum,
             double minAngleDeg, double maxAngleDeg
     ) {
         List<Long> failedNodes = new ArrayList<>();
@@ -122,33 +108,42 @@ public class FilletGenerator {
 
         // 将所有节点转换为平面坐标
         List<EastNorth> en = new ArrayList<>();
-        for (Node n : nodes) en.add(toEastNorth(n.getCoor()));
+        for (Node n : nodes) en.add(UtilsMath.toEastNorth(n.getCoor()));
 
         // 为每个拐角预计算圆角
         List<double[]> T1s = new ArrayList<>();  // 存储每个拐角的第一个切点
         // List<double[]> T2s = new ArrayList<>();  // 存储每个拐角的第二个切点
         List<List<EastNorth>> arcs = new ArrayList<>();  // 存储每个拐角的圆弧
-        for (int i = 0; i < nPts - 2; i ++){
+        for (int i = 0; i < nPts - 2; i ++) {
             EastNorth A = en.get(i);      // 起点    B → C
             EastNorth B = en.get(i + 1);  // 拐点    ↑
             EastNorth C = en.get(i + 2);  // 终点    A
 
             // JOSM用Mercator投影的NorthEast坐标等角不等距，需要重算距离，以拐点B取维度计算
             double latB = nodes.get(i + 1).getCoor().lat();
-            double cosLat = Math.cos(Math.toRadians(latB));
-            // 避免cosLat为0（极点附近）
-            if (Math.abs(cosLat) < 1e-9) {
-                // 如果纬度接近90度，使用一个很小的正数，避免除0，但这样结果会不准确，所以直接失败跳过这个圆弧吧
+            double enRadius;
+            try {
+                enRadius = UtilsMath.surfaceDistanceToEastNorth(surfaceRadius, latB);
+            } catch (ColumbinaException exSurToEN) {
+                // 如果纬度接近90度，使用一个很小的正数，避免除0，但这样不准确，所以直接失败跳过这个圆弧吧
                 T1s.add(null);
                 arcs.add(null);
                 failedNodes.add(nodes.get(i).getUniqueId());
                 continue;
             }
-            double radiusCorrect = radiusMeters / cosLat;
-
-            List<EastNorth> arc = filletArcEN(  // 为每个拐角生成PNum个点的圆弧
+//            double cosLat = Math.cos(Math.toRadians(latB));
+//            // 避免cosLat为0（极点附近）
+//            if (Math.abs(cosLat) < 1e-9) {
+//                // 如果纬度接近90度，使用一个很小的正数，避免除0，但这样不准确，所以直接失败跳过这个圆弧吧
+//                T1s.add(null);
+//                arcs.add(null);
+//                failedNodes.add(nodes.get(i).getUniqueId());
+//                continue;
+//            }
+            // 有EN长度之后继续算圆弧
+            List<EastNorth> arc = getFilletArc(  // 为每个拐角生成PNum个点的圆弧
                     A, B, C,
-                    radiusCorrect, angleStep, maxPointNum,
+                    enRadius, angleStep, maxPointNum,
                     minAngleDeg, maxAngleDeg
             );
 
@@ -166,29 +161,52 @@ public class FilletGenerator {
         }
         if (way.isClosed()) {  // 闭合曲线首尾相连的首末点曲线
             double latB = nodes.getFirst().getCoor().lat();
-            double cosLat = Math.cos(Math.toRadians(latB));
-            if (Math.abs(cosLat) < 1e-9) {
-                T1s.add(null);
-                arcs.add(null);
-                failedNodes.add(nodes.getFirst().getUniqueId());
-            } else {  // 可以算出重算距离才继续
-                double radiusCorrect = radiusMeters / cosLat;
-                List<EastNorth> arcEnd = filletArcEN(
+//            double cosLat = Math.cos(Math.toRadians(latB));
+//            if (Math.abs(cosLat) < 1e-9) {
+//                T1s.add(null);
+//                arcs.add(null);
+//                failedNodes.add(nodes.getFirst().getUniqueId());
+//            } else {  // 可以算出重算距离才继续
+//                double radiusCorrect = surfaceRadius / cosLat;
+//                List<EastNorth> arcEnd = filletArcEN(
+//                        en.get(nPts - 2), en.get(0), en.get(1),  // en.get(0) = getFirst() == en.get(-1)
+//                        radiusCorrect, angleStep, maxPointNum,
+//                        minAngleDeg, maxAngleDeg
+//                );
+//                if (arcEnd == null) {
+//                    T1s.add(null);
+//                    // T2s.add(null);
+//                    arcs.add(null);
+//                    failedNodes.add(nodes.getFirst().getUniqueId());
+//                } else {
+//                    EastNorth t1End = arcEnd.getFirst(); // EastNorth t2End = arcEnd.getLast();
+//                    T1s.add(new double[]{t1End.getX(), t1End.getY()});
+//                    // T2s.add(new double[]{t2End.getX(), t2End.getY()});
+//                    arcs.add(arcEnd);
+//                }
+//            }
+            try {
+                double enRadius = UtilsMath.surfaceDistanceToEastNorth(surfaceRadius, latB);
+                // 这个try不在for里面，不能continue了，所以下面这几行搬进try；如果接近90°会直接走catch，不进入下面这几行
+                List<EastNorth> arcEnd = getFilletArc(
                         en.get(nPts - 2), en.get(0), en.get(1),  // en.get(0) = getFirst() == en.get(-1)
-                        radiusCorrect, angleStep, maxPointNum,
+                        enRadius, angleStep, maxPointNum,
                         minAngleDeg, maxAngleDeg
                 );
                 if (arcEnd == null) {
                     T1s.add(null);
-                    // T2s.add(null);
                     arcs.add(null);
                     failedNodes.add(nodes.getFirst().getUniqueId());
                 } else {
-                    EastNorth t1End = arcEnd.getFirst(); // EastNorth t2End = arcEnd.getLast();
+                    EastNorth t1End = arcEnd.getFirst();  // EastNorth t2End = arcEnd.getLast();
                     T1s.add(new double[]{t1End.getX(), t1End.getY()});
                     // T2s.add(new double[]{t2End.getX(), t2End.getY()});
                     arcs.add(arcEnd);
                 }
+            } catch (ColumbinaException exSurToEN) {
+                T1s.add(null);
+                arcs.add(null);
+                failedNodes.add(nodes.getFirst().getUniqueId());
             }
         }
 
@@ -196,19 +214,19 @@ public class FilletGenerator {
         List<Node> finalNodes = new ArrayList<>();
         // 添加起始点：如果原路径闭合，且首末点有曲线，则以首末点曲线（arcs最后一个）终点为整个新路径起点；否则使用原路径第一个节点
         boolean useLastArcLastNode = way.isClosed() && arcs.getLast() != null;
-        if (useLastArcLastNode) finalNodes.add(new Node(toLatLon(arcs.getLast().getLast())));
+        if (useLastArcLastNode) finalNodes.add(new Node(UtilsMath.toLatLon(arcs.getLast().getLast())));
         else finalNodes.add(way.getNode(0));
         // 遍历除最后一个节点以外所有路径节点，用圆弧替换拐角
         for (int i = 0; i < nPts - 2; i ++) {
             if (arcs.get(i) != null) {  // 检查本次的拐角B（i+1）是否有有效圆角（圆角编号=A编号=i），圆弧存在则使用圆角路径
                 double[] T1 = T1s.get(i);
-                Node curveFirst = new Node(toLatLon(new EastNorth(T1[0], T1[1])));
                 // 添加圆弧上第一个切点（如果与上个点不同）
+                Node curveFirst = new Node(UtilsMath.toLatLon(new EastNorth(T1[0], T1[1])));
                 if (!finalNodes.getLast().equals(curveFirst)) finalNodes.add(curveFirst);
                 // 添加圆弧上其余点（跳过第一个点，避免重复）
                 List<EastNorth> arc = arcs.get(i);
                 for (int k = 1; k < arc.size(); k ++)
-                    finalNodes.add(new Node(toLatLon(arc.get(k))));
+                    finalNodes.add(new Node(UtilsMath.toLatLon(arc.get(k))));
             } else {  // 圆弧不存在则直接将拐点B加进来
                 finalNodes.add(way.getNode(i + 1));
             }
@@ -218,14 +236,14 @@ public class FilletGenerator {
             if (arcs.getLast() != null) {  // 如果原路径闭合，且首末点有曲线，拼上最后一条曲线并连上起点
                 List<EastNorth> arcClosedEnd = arcs.getLast();  // 对于闭合路径nPts-2倒数第2个点，nPts-1最后一个点=0起点，1表示第2个点
                 for (int k = 0; k < arcClosedEnd.size(); k ++)
-                    finalNodes.add(new Node(toLatLon(arcClosedEnd.get(k))));
+                    finalNodes.add(new Node(UtilsMath.toLatLon(arcClosedEnd.get(k))));
                 finalNodes.add(finalNodes.getFirst());
             } else finalNodes.add(way.getNode(0));
         } else {
             finalNodes.add(way.getNode(way.getNodesCount() - 1));
         }
 
-        return new FilletResult(finalNodes, failedNodes);
+        return new DrawingNewNodeResult(finalNodes, failedNodes);
         // 正式绘制前注意去重
     }
 }
